# lind-wasm

./: .bazelrc  .gitignore  .gitmodules  404.html  BUILD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MODULE.bazel  Makefile  PR.md  README.md  SECURITY.md  Toolchain-WASI-LLVM.cmake  Toolchain-WASI-wasm32.cmake  Toolchain-WASI.cmake  WORKSPACE  bug-54.md  build-compiler-rt-wasm.sh  build-compiler-rt.sh  build-libcpp.sh  build-llvm.sh  close.c  cloudbuild.yaml  cpp_compile.md  cpwasm.sh  dup-pipe.c  fork-fd.c  generate_token_and_upload_secret.py  geteuid_grate.c  impl-log.md  impl-plan.md  index.html  lind_config.sh  lind_shell.sh  lindtool.sh  mkdocs.yml  native-build.sh  open.c  pipe-fcntl.c  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
Docker/: Dockerfile.dev  Dockerfile.e2e  Dockerfile.libcpp
benchmarks/: cage_stress.c
community/: index.html
contribute/: RUNNING_ON_NATIVE_LINUX.md  index.html
docs/: cpp-sysroot-issue245.md  getting-started.md  index.md  technical-overview.md
example_grate/: geteuid_grate.c  grate_script.sh  open.c  open_grate.c
getting-started/: index.html
imfs_grate/: compile_open.sh  open_grate.c  preloads  run_imfs_tcc.sh
internal/: index.html
libcxx-build/: CMakeCache.txt  (+4 more)
lind-sharedlib-poc/examples/01-scalars/stub/: Cargo.toml
lind-sharedlib-poc/examples/01-scalars/stub/src/: lib.rs
lind-sharedlib-poc/examples/02-strings/stub/: Cargo.toml
lind-sharedlib-poc/examples/02-strings/stub/src/: lib.rs
lind-sharedlib-poc/examples/03-buffers/stub/: Cargo.toml
lind-sharedlib-poc/examples/03-buffers/stub/src/: lib.rs
src/RawPOSIX/: Cargo.toml  README.md  RawPOSIX  lind-wasm.code-workspace  mod.rs
src/RawPOSIX/benches/: benchmark.rs  exit_benchmark.rs
src/RawPOSIX/src/: cage.rs  lib.rs
src/RawPOSIX/src/constants/: fs_constants.rs  mod.rs  net_constants.rs  sys_constants.rs
src/RawPOSIX/src/fdtables/: commonconstants.rs  dashmaparrayglobal.rs  dashmapvecglobal.rs  mod.rs  muthashmaxglobal.rs  threei.rs  vanillaglobal.rs
src/RawPOSIX/src/interface/: comm.rs  errnos.rs  file.rs  mem.rs  misc.rs  mod.rs  signal.rs  timer.rs  types.rs
src/RawPOSIX/src/rawposix/: mod.rs  vmmap.rs
src/RawPOSIX/src/rawposix/constants/: fs_constants.rs  mod.rs
src/RawPOSIX/src/rawposix/syscalls/: fs_calls.rs  mod.rs  sys_calls.rs
src/RawPOSIX/src/safeposix/: cage.rs  dispatcher.rs  filesystem.rs  mod.rs  nacl_syscall_common.c  shm.rs  vmmap.rs  vmmap_constants.rs
src/RawPOSIX/src/safeposix/syscalls/: fs_calls.rs  fs_constants.rs  mod.rs  net_calls.rs  sys_calls.rs
src/RawPOSIX/src/sanitization/: errno.rs  misc.rs  mod.rs  sockaddr.rs  type_conv.rs
src/RawPOSIX/src/tests/: fs_tests.rs  ipc_tests.rs  mod.rs  networking_tests.rs  sys_tests.rs  vmmap_test.rs
src/RawPOSIX/src/threei/: mod.rs  syscall_table.rs  threei.rs  threeiconstant.rs
src/RawPOSIX/src/tools/: fs_utils.rs  lib_fs_utils.rs
src/RawPOSIX/tests/: fs_test.rs
src/cage/: Cargo.toml  README.md
src/cage/benches/: cage_map_bench.rs
src/cage/src/: cage.rs  lib.rs  mpk.rs  timer.rs
src/cage/src/memory/: mem_helper.rs  memory.rs  mod.rs  shared.rs  vmmap.rs
src/cage/src/signal/: mod.rs  signal.rs  timer.rs
src/fdtables/: .gitignore  Cargo.toml  README.md  run_all
src/fdtables/.cargo/: config.toml
src/fdtables/benches/: virt_basics.rs
src/fdtables/docs/: check_cage_exists.md  close_virtualfd.md  convert_poll_result_back_to_virtual.md  convert_virtualfds_for_poll.md  copy_fdtable_for_cage.md  empty_fds_for_exec.md  epoll_add_underfd.md  epoll_create_empty.md  epoll_get_underfd_hashmap.md  fdtableentry.md  get_bitmask_for_select.md  get_one_virtual_bitmask_from_select_result.md  get_specific_virtual_fd.md  get_unused_virtual_fd.md  get_unused_virtual_fd_from_arg.md  get_unused_virtual_fd_from_startfd.md  get_virtual_epoll_wait_data.md  init_empty_cage.md  prepare_bitmasks_for_select.md  register_close_handlers.md  remove_cage_from_fdtable.md  return_fdtable_copy.md  set_cloexec.md  set_perfdinfo.md  translate_virtual_fd.md  virtualize_epoll_ctl.md
src/fdtables/impl_macros/: dashmapvec  muthashmax  vanilla
src/fdtables/src/: commonconstants.rs  current_impl  dashmaparrayglobal.rs  dashmapglobal.obsolete  dashmapvecglobal.rs  lib.rs  muthashmaxglobal.rs  threei.rs  vanillaglobal.rs
src/lind-boot/: .gitignore  Cargo.toml
src/lind-boot/.cargo/: config.toml
src/lind-boot/src/: README.md  cli.rs  execute.rs  host.rs  lib.rs  load.rs  main.rs  perf.rs  shims.rs  trampoline.rs
src/lind-boot/src/lind_mpk/: RuntimeInfo.rs  execute.rs  mod.rs  syscalls.rs
src/lind-boot/src/lind_wasmtime/: dependency_resolver.rs  execute.rs  host.rs  library_search.rs  mod.rs  sandboxed_lib.rs  trampoline.rs
src/rawposix/: Cargo.toml  README.md  mod.rs
src/rawposix/benches/: benchmark.rs  exit_benchmark.rs
src/rawposix/src/: bench_calls.rs  fs_calls.rs  init.rs  inmem_ipc.rs  lib.rs  net_calls.rs  perf.rs  sem_calls.rs  sys_calls.rs  syscall_table.rs
src/rawposix/src/syscalls/: fs_calls.rs  mod.rs  net_calls.rs  sys_calls.rs
src/rawposix/src/tests/: cage_tests.rs  fdtable_tests.rs  integration_tests.rs  mod.rs  sys_tests.rs  threei_tests.rs
src/rawposix/tests/: fs_test.rs
src/threei/: Cargo.toml  README.md
src/threei/benches/: handler_lookup.rs
src/threei/src/: lib.rs  lib_handler_table.rs  lib_symbol_table.rs  perf.rs  syscall_table.rs  threei.rs  threei_const.rs
src/threei/src/handler_table/: dashmap_impl.rs  hashmap_impl.rs  mod.rs
src/threei/tests/: handler_tests.rs  make_syscall_tests.rs  make_tests.rs
src/threei/tests/common/: mod.rs
src/wasmtime/crates/lind-3i/: Cargo.toml
src/wasmtime/crates/lind-3i-vmctx/: Cargo.toml
src/wasmtime/crates/lind-3i-vmctx/src/: lib.rs
src/wasmtime/crates/lind-3i/src/: grate_wasmfn.rs  lib.rs  vmctx_3i.rs
src/wasmtime/crates/lind-common/: Cargo.toml
src/wasmtime/crates/lind-common/src/: lib.rs
src/wasmtime/crates/lind-multi-process/: Cargo.toml
src/wasmtime/crates/lind-multi-process/src/: clone_constants.rs  lib.rs  shebang.rs  signal.rs  utils.rs
(+7219 files in other folders)
