[package]
name = "cage"
version = "0.1.0"
edition = "2021"

[dependencies]
sysdefs = { path = "../sysdefs" }
libc = "0.2"
nodit = "0.9.2" # Used for VMMAP
quick_cache = "0.6.9"
fdtables = { path = "../fdtables" }
once_cell = "1.18" 
parking_lot = "0.12"
dashmap = { version = "5.1", features=["serde"] }
