[package]
name = "lind-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime-lind-common = { path = "../wasmtime/crates/lind-common" }
wasmtime-lind-multi-process = { path = "../wasmtime/crates/lind-multi-process" }
wasmtime-lind-utils = { path = "../wasmtime/crates/lind-utils" }
rawposix = { path = "../wasmtime/crates/rawposix" }
cage = { path = "../wasmtime/crates/cage" }
threei = { path = "../wasmtime/crates/threei" }
sysdefs = { path = "../wasmtime/crates/sysdefs" }
wasi-common = { path = "../wasmtime/crates/wasi-common", features = ["sync"] ,default-features = false }
wasmtime-lind-3i = { path = "../wasmtime/crates/lind-3i" }
wasmtime = { path = "../wasmtime/crates/wasmtime", features = ["cranelift", "pooling-allocator", "gc", "threads"], default-features = false }
wasmtime-wasi-threads = { path = "../wasmtime/crates/wasi-threads" }
wasmtime-wasi = { version = "23.0.0", features = ["preview1"] , default-features = false }

wiggle = { version = "23.0.0", default-features = false }
anyhow = { version = "1.0.66", default-features = false }
cap-std = { version = "3.4.2", default-features = false }
