[package]
name = "lind-boot"
version = "0.1.0"
edition = "2024"

[features]
disable_signals = ["cage/disable_signals", "wasmtime-lind-multi-process/disable_signals"]
secure = ["typemap/secure"]
lind_debug = ["wasmtime-lind-common/lind_debug", "cage/lind_debug" ]
debug-dylink = ["wasmtime-lind-dylink/debug-dylink", "wasmtime-lind-multi-process/debug-dylink", "wasmtime-lind-utils/debug-dylink", "wasmtime/debug-dylink"]
debug-grate-calls = ["wasmtime-lind-3i/debug-grate-calls"]

[dependencies]
wasmtime-lind-common = { path = "../wasmtime/crates/lind-common" }
wasmtime-lind-dylink = { path = "../wasmtime/crates/lind-dylink" }
wasmtime-lind-multi-process = { path = "../wasmtime/crates/lind-multi-process" }
wasmtime-lind-utils = { path = "../wasmtime/crates/lind-utils" }
rawposix = { path = "../wasmtime/crates/rawposix" }
cage = { path = "../wasmtime/crates/cage" }
threei = { path = "../wasmtime/crates/threei" }
sysdefs = { path = "../wasmtime/crates/sysdefs" }
typemap = { path = "../wasmtime/crates/typemap" }
wasmtime-lind-3i = { path = "../wasmtime/crates/lind-3i" }
wasmtime = { path = "../wasmtime/crates/wasmtime", features = ["cranelift", "pooling-allocator", "gc", "threads", "demangle", "addr2line", "cache"], default-features = false }
wasmtime-wasi = { version = "23.0.0", features = ["preview1"] , default-features = false }

anyhow = { version = "1.0.66", default-features = false }
clap = { version = "4", features = ["derive"] }
cfg-if = "1.0"
libc = "0.2"
