[package]
name = "rawposix"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
dashmap = "5.0"      
once_cell = "1.18" 
libc = "0.2"
parking_lot = "0.12"
tracing = "0.1" 
tracing-subscriber = "0.3"
fdtables = { path = "../fdtables" }
sysdefs = { path = "../sysdefs" }
typemap = { path = "../typemap" }
cage = { path = "../cage" }

[features]
default = ["fast"]
fast = []
secure = []

[dev-dependencies]
criterion = {version = "0.4.0", features = ["html_reports"] }

