[package]
name = "rawposix"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
dashmap = "5.0"      
once_cell = "1.18" 
libc = "0.2"
parking_lot = "0.12"
tracing = "0.1" 
tracing-subscriber = "0.3"
fdtables = { path = "../fdtables", default-features = false }
sysdefs = { path = "../sysdefs" }
typemap = { path = "../typemap" }
cage = { path = "../cage" }
threei = { path = "../threei" }

[features]
default = ["fast"]
fast = []
secure = []
# Pass-through selectors for the fdtables backend. Exactly one must be
# enabled by a downstream crate (lind-boot) — rawposix on its own won't
# compile without one of these because fdtables itself has no default.
fdtables-dashmaparray = ["fdtables/dashmaparray"]
fdtables-dashmapvec = ["fdtables/dashmapvec"]
fdtables-muthashmax = ["fdtables/muthashmax"]
fdtables-vanilla = ["fdtables/vanilla"]

[dev-dependencies]
