[package]
name = "threei"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
sysdefs = { path = "../sysdefs" }
typemap = { path = "../typemap" }
cage = { path = "../cage" }
dashmap = { version = "6" }
once_cell = "1.18" 
lazy_static = "1.4"
parking_lot = "0.12"
nodit = "0.9.2" # Used for VMMAP
lind-perf = { path = "../lind-perf", optional = true }

[features]
default = ["hashmap"]
hashmap = []
dashmap = []
lind_perf = ["dep:lind-perf"]

[dev-dependencies]
serial_test = "3"
