[package]
name = "wasmtime-lind-3i-vmctx"
version.workspace = true
authors.workspace = true
description = "lind interface within wasmtime"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
wasmtime = { workspace = true, features = ['threads'] }
wasmtime-environ = { workspace = true }
once_cell = { workspace = true }




