[package]
name = "wasmtime-lind-3i"
version.workspace = true
authors.workspace = true
description = "lind 3i interface within wasmtime for grate calls"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
wasmtime = { workspace = true, features = ['threads'] }
wasmtime-environ = { workspace = true }
once_cell = { workspace = true }
sysdefs = { path = "../sysdefs" }
anyhow = { version = "1.0.22", default-features = false }
threei = { path = "../threei" }
lazy_static = "1.4"
dashmap = { version = "6" }
